--- a/bdassSerial/bdassConsole/bdassConsole.vcxproj
+++ b/bdassSerial/bdassConsole/bdassConsole.vcxproj
@@ -48,6 +48,7 @@
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
+    <CLRSupport>true</CLRSupport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -165,9 +166,12 @@
     <ProjectReference Include="..\BDATLSerial\BDATLSerial.vcxproj">
       <Project>{cd1b2e04-3e98-4463-8cdf-60f4077a34e5}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\BDMFCSerial\BDMFCSerial.vcxproj">
-      <Project>{d3d3e98d-49a4-4989-8d21-2fef3eebc736}</Project>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="config.ini">
+      <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
