--- a/bdassSerial/bdassConsole/bdassConsole.vcxproj.filters
+++ b/bdassSerial/bdassConsole/bdassConsole.vcxproj.filters
@@ -44,4 +44,7 @@
       <Filter>资源文件</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="config.ini" />
+  </ItemGroup>
 </Project>
