加载配置文件代码块 for mfc dll

--- a/bdassSerial/BDMFCSerial/BDMFCSerial.vcxproj
+++ b/bdassSerial/BDMFCSerial/BDMFCSerial.vcxproj
@@ -49,6 +49,7 @@
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
+    <CLRSupport>true</CLRSupport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
