--- a/bdassSerial/BDMFCSerial/BDMFCSerial.vcxproj
+++ b/bdassSerial/BDMFCSerial/BDMFCSerial.vcxproj
@@ -58,6 +58,7 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
     <CLRSupport>true</CLRSupport>
+    <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
